# doode-old

./: .gitignore  .gitmodules  CMakeLists.txt  bootstrap.sh  compile_commands.json
doode/: .clang-format  .clang-tidy  CMakeLists.txt
doode/src/: Engine.cpp  Engine.hpp  Physics.hpp  Scene.cpp  Scene.hpp  Services.hpp  Types.hpp  main.cpp
doode/src/components/: CharacterControlComponent.hpp  CollisionResponseComponent.hpp  MovingPlatformComponent.hpp  PhysicsComponent.hpp  Tags.hpp
doode/src/scenes/: DummyScene.cpp  DummyScene.hpp  GameScene.cpp  GameScene.hpp  LaboratoryScene.cpp  LaboratoryScene.hpp
doode/src/systems/: Box2dRenderSystem.cpp  Box2dRenderSystem.hpp  CameraFollowSystem.cpp  CameraFollowSystem.hpp  CharacterControlSystem.cpp  CharacterControlSystem.hpp  MovingPlatformSystem.cpp  MovingPlatformSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  SystemBase.hpp
doode/src/utility/: ContactFilter.cpp  ContactFilter.hpp  ContactListener.cpp  ContactListener.hpp  GameFactory.cpp  GameFactory.hpp  Gamepad.cpp  Gamepad.hpp  Keyboard.cpp  Keyboard.hpp  Maze.cpp  Maze.hpp  Physics.cpp  Physics.hpp  Random.cpp  Random.hpp
